# personalized-chatbot

./: .gitignore  Makefile  README.md  index.html  load_documents.py  pyproject.toml  requirements.txt
backend/: Makefile  app.py  load_documents.py  pyproject.toml  requirements.txt
backend/database/: document_store.py  vector_store.py
backend/models/: model.py
backend/parser/: document_parser.py
backend/prompts/: chatbot_prompt.py
backend/src/: main.py  orchestration.py
backend/src/routes/: inference_routes.py  load_documents_routes.py
database/: database.py
database/chromadb_file/: chroma.sqlite3
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/pages/: Index.tsx
models/: model.py
parser/: sample_2_page.txt
prompts/: chatbot_prompt.py
src/: main.py  orchestration.py
src/routes/: inference_routes.py
