[project]
name = "personal-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.0.13",
    "fastapi==0.110.0",
    "groq>=0.29.0",
    "pydantic==2.11.7",
    "pymupdf==1.26.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "requests==2.32.4",
    "streamlit==1.32.2",
    "uvicorn==0.27.1",
]
